[package]
name = "riscv-rtfm"
version = "0.1.0"
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"

[lib]
name = "rtfm"

[dependencies]
heapless = "0.5.0-alpha.2"
hifive1 = { path = "../hifive1" }
riscv = { path = "../riscv" }
riscv-rtfm-macros = { path = "macros" }
rt = { path = "../rt" }
rtfm-core = { git = "https://github.com/japaric/rtfm-core" }

[dev-dependencies]
panic-halt = "0.2.0"
semihosting = { path = "../semihosting" }
ufmt-utils = "0.1.0-alpha.1"
ufmt = "0.1.0-beta.4"
