[package]
name = "riscv-rtfm-macros"
version = "0.1.0"
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "0.15.35"
quote = "0.6.12"
proc-macro2 = "0.4.30"

[dependencies.rtfm-syntax]
git = "https://github.com/japaric/rtfm-syntax"
rev = "f1848362d2055397124349228a7d79856d3fbc0e"